refactor(signup): signup route has been refactored, but it needs some changes and test
